// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`group with complex values should accept new value 1`] = `
<div>
  <div class>
    {"foo":1}
  </div>
  <div class>
    {"bar":2}
  </div>
</div>
`;

exports[`group with complex values should accept new value 2`] = `
<div>
  <div class="selected">
    {"foo":1}
  </div>
  <div class>
    {"bar":2}
  </div>
</div>
`;

exports[`group with complex values should emit selected value 1`] = `
<div>
  <div class>
    {"foo":1}
  </div>
  <div class="selected">
    {"bar":2}
  </div>
</div>
`;

exports[`group with explicit values should emit new selection 1`] = `
<div>
  <div class="selected">
    one
  </div>
  <div class>
    two
  </div>
</div>
`;

exports[`group with explicit values should not emit new selection if clicking disabled item 1`] = `
<div>
  <div class>
    one
  </div>
  <div class>
    two
  </div>
</div>
`;

exports[`group with implicit values should emit new selection 1`] = `
<div>
  <div class="selected">
  </div>
  <div class>
  </div>
</div>
`;

exports[`group with implicit values should set first non-disabled item as value when forced mandatory 1`] = `
<div>
  <div class>
  </div>
  <div class="selected">
  </div>
</div>
`;
